--- a/config/mongodb.conf
+++ b/config/mongodb.conf
@@ -21,7 +21,7 @@ systemLog:
 # network interfaces
 net:
   port: 27017
-  bindIp: 10.0.123.100
+  bindIp: "127.0.0.1, 10.0.123.100"
 
 
 # how the process runs
