--- a/config/free5gc-ue.yaml
+++ b/config/free5gc-ue.yaml
@@ -43,6 +43,11 @@ sessions:
     slice:
       sst: 0x01
       sd: 0x010203
+  - type: 'IPv4'
+    apn: 'internet2'
+    slice:
+      sst: 0x01
+      sd: 0x010203
 
 # Configured NSSAI for this UE by HPLMN
 configured-nssai:
